fix: 100vh on mobile firefox

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 html {
   height: -webkit-fill-available;
-  height: -moz-available;
   height: fill-available;
 }
 
 body {
+  min-height: 100vh;
   min-height: -webkit-fill-available;
-  min-height: -moz-available;
   min-height: fill-available;
 }
